@@ -12,6 +12,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -45,7 +46,7 @@ public class IncidentCommandService {
                         .incident(savedIncident)
                         .groupInfo(group)
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         incidentGroupRepository.saveAll(groupEntities);
 
